--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Note App</title>
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <style>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             margin: 0;
@@ -117,6 +117,7 @@
     </div>
 
     <script>
+        // Point to the backend API, which will run on port 5001
         const apiUrl = '/api/notes';
         const noteList = document.getElementById('notes-list');
         const noteInput = document.getElementById('note-input');
